Fix: modified environment variables

--- a/.env.sample
+++ b/.env.sample
@@ -11,13 +11,13 @@
 #LIGHTHOUSE_PORT_P2P=
 
 #MEVBOOST_VERSION=
+#BUILDER_API_ENABLED=
 #MEVBOOST_RELAYS=
 
-#SSV_NODE_VERSION_TAG=
+#SSV_NODE_VERSION=
 #SSV_NODE_P2P_PORT=
 #SSV_NODE_P2P_PORT_UDP=
 
-#SSV_DKG_VERSION_TAG=
+#SSV_DKG_VERSION=
 #SSV_DKG_PORT=
-
-SSV_OPERATOR_ID=100
+#SSV_OPERATOR_ID=
